@@ -35,9 +35,13 @@ import org.apache.lucene.spatial.query.SpatialArgs;
 import org.apache.lucene.spatial.query.SpatialOperation;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.request.SolrRequestInfo;
 import org.apache.solr.search.QParser;
+import org.apache.solr.search.SyntaxError;
 
 /**
+ * A field for indexed dates and date ranges. It's mostly compatible with TrieDateField.
+ *
  * @see NumberRangePrefixTreeStrategy
  * @see DateRangePrefixTree
  */
@@ -45,7 +49,9 @@ public class DateRangeField extends AbstractSpatialPrefixTreeFieldType<NumberRan
 
   private static final String OP_PARAM = "op";//local-param to resolve SpatialOperation
 
-  private final DateRangePrefixTree tree = DateRangePrefixTree.INSTANCE;
+  private static final DateRangePrefixTree tree = DateRangePrefixTree.INSTANCE;
+
+  private static final TrieDateField trieDateField = new TrieDateField();//used for utility methods
 
   @Override
   protected void init(IndexSchema schema, Map<String, String> args) {
@@ -64,24 +70,74 @@ public class DateRangeField extends AbstractSpatialPrefixTreeFieldType<NumberRan
 
   @Override
   public List<IndexableField> createFields(SchemaField field, Object val, float boost) {
-    if (val instanceof Date || val instanceof Calendar)//From URP
+    if (val instanceof Date || val instanceof Calendar)//From URP?
       val = tree.toUnitShape(val);
     return super.createFields(field, val, boost);
   }
 
   @Override
-  protected NRShape parseShape(String str) {
-    try {
-      return tree.parseShape(str);
-    } catch (ParseException e) {
-      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
-          "Couldn't parse date because: "+ e.getMessage(), e);
+  protected String getStoredValue(Shape shape, String shapeStr) {
+    if (shape instanceof UnitNRShape) {
+      UnitNRShape unitShape = (UnitNRShape) shape;
+      if (unitShape.getLevel() == tree.getMaxLevels()) {
+        //fully precise date. We can be fully compatible with TrieDateField.
+        Date date = tree.toCalendar(unitShape).getTime();
+        return TrieDateField.formatExternal(date);
+      }
     }
+    return (shapeStr == null ? shape.toString() : shapeStr);//we don't normalize ranges here; should we?
+  }
+
+  @Override
+  protected NRShape parseShape(String str) {
+    if (str.contains(" TO ")) {
+      //TODO parsing range syntax doesn't support DateMath on either side or exclusive/inclusive
+      try {
+        return tree.parseShape(str);
+      } catch (ParseException e) {
+        throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
+            "Couldn't parse date because: "+ e.getMessage(), e);
+      }
+    } else {
+      return tree.toShape(parseCalendar(str));
+    }
+  }
+
+  private Calendar parseCalendar(String str) {
+    if (str.startsWith("NOW") || str.lastIndexOf('Z') >= 0) {
+      //use Solr standard date format parsing rules.
+      //TODO parse a Calendar instead of a Date, rounded according to DateMath syntax.
+      Date date = trieDateField.parseMath(null, str);
+      Calendar cal = tree.newCal();
+      cal.setTime(date);
+      return cal;
+    } else {
+      try {
+        return tree.parseCalendar(str);
+      } catch (ParseException e) {
+        throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
+            "Couldn't parse date because: "+ e.getMessage(), e);
+      }
+
+    }
+  }
+
+  /** For easy compatibility with {@link TrieDateField#parseMath(Date, String)}. */
+  public Date parseMath(Date now, String rawval) {
+    return trieDateField.parseMath(now, rawval);
   }
 
   @Override
   protected String shapeToString(Shape shape) {
-    return shape.toString();//generally round-trips for DateRangePrefixTree
+    if (shape instanceof UnitNRShape) {
+      UnitNRShape unitShape = (UnitNRShape) shape;
+      if (unitShape.getLevel() == tree.getMaxLevels()) {
+        //fully precise date. We can be fully compatible with TrieDateField.
+        Date date = tree.toCalendar(unitShape).getTime();
+        return TrieDateField.formatExternal(date);
+      }
+    }
+    return shape.toString();//range shape
   }
 
   @Override
@@ -99,15 +155,38 @@ public class DateRangeField extends AbstractSpatialPrefixTreeFieldType<NumberRan
   }
 
   @Override
-  public Query getRangeQuery(QParser parser, SchemaField field, String part1, String part2, boolean minInclusive, boolean maxInclusive) {
-    if (!minInclusive || !maxInclusive)
-      throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "exclusive range boundary not supported");
-    if (part1 == null)
-      part1 = "*";
-    if (part2 == null)
-      part2 = "*";
-    Shape shape = tree.toRangeShape((UnitNRShape) parseShape(part1), (UnitNRShape) parseShape(part2));
+  public Query getRangeQuery(QParser parser, SchemaField field, String startStr, String endStr, boolean minInclusive, boolean maxInclusive) {
+    if (parser == null) {//null when invoked by SimpleFacets.  But getQueryFromSpatialArgs expects to get localParams.
+      final SolrRequestInfo requestInfo = SolrRequestInfo.getRequestInfo();
+      parser = new QParser("", null, requestInfo.getReq().getParams(), requestInfo.getReq()) {
+        @Override
+        public Query parse() throws SyntaxError {
+          throw new IllegalStateException();
+        }
+      };
+    }
+
+    Calendar startCal;
+    if (startStr == null) {
+      startCal = tree.newCal();
+    } else {
+      startCal = parseCalendar(startStr);
+      if (!minInclusive) {
+        startCal.add(Calendar.MILLISECOND, 1);
+      }
+    }
+    Calendar endCal;
+    if (endStr == null) {
+      endCal = tree.newCal();
+    } else {
+      endCal = parseCalendar(endStr);
+      if (!maxInclusive) {
+        endCal.add(Calendar.MILLISECOND, -1);
+      }
+    }
+    Shape shape = tree.toRangeShape(tree.toShape(startCal), tree.toShape(endCal));
     SpatialArgs spatialArgs = new SpatialArgs(SpatialOperation.Intersects, shape);
     return getQueryFromSpatialArgs(parser, field, spatialArgs);
   }
+
 }
