@@ -3,7 +3,7 @@ package org.apache.solr.schema;
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
+ * this work for additional information regarding copyright ownership.NRP
  * The ASF licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
@@ -33,18 +33,23 @@ public class DateRangeFieldTest extends SolrTestCaseJ4 {
     assertU(adoc("id", "0", "dateRange", "[* TO *]"));
     assertU(adoc("id", "1", "dateRange", "2014-05-21T12:00:00.000Z"));
     assertU(adoc("id", "2", "dateRange", "[2000 TO 2014-05-21]"));
+    assertU(adoc("id", "3", "dateRange", "2020-05-21T12:00:00.000Z/DAY"));//DateMath syntax
     assertU(commit());
 
-    //ensure stored value is the same (not toString of Shape)
-    assertQ(req("q", "id:1", "fl", "dateRange"), "//result/doc/arr[@name='dateRange']/str[.='2014-05-21T12:00:00.000Z']");
+    //ensure stored value resolves datemath
+    assertQ(req("q", "id:1", "fl", "dateRange"), "//result/doc/arr[@name='dateRange']/str[.='2014-05-21T12:00:00Z']");//no 000 ms
+    assertQ(req("q", "id:2", "fl", "dateRange"), "//result/doc/arr[@name='dateRange']/str[.='[2000 TO 2014-05-21]']");//a range; same
+    assertQ(req("q", "id:3", "fl", "dateRange"), "//result/doc/arr[@name='dateRange']/str[.='2020-05-21T00:00:00Z']");//resolve datemath
 
     String[] commonParams = {"q", "{!field f=dateRange op=$op v=$qq}", "sort", "id asc"};
-    assertQ(req(commonParams, "qq", "[* TO *]"), xpathMatches(0, 1, 2));
+    assertQ(req(commonParams, "qq", "[* TO *]"), xpathMatches(0, 1, 2, 3));
     assertQ(req(commonParams, "qq", "2012"), xpathMatches(0, 2));
     assertQ(req(commonParams, "qq", "2013", "op", "Contains"), xpathMatches(0, 2));
     assertQ(req(commonParams, "qq", "2014", "op", "Contains"), xpathMatches(0));
     assertQ(req(commonParams, "qq", "[1999 TO 2001]", "op", "IsWithin"), xpathMatches());
     assertQ(req(commonParams, "qq", "2014-05", "op", "IsWithin"), xpathMatches(1));
+
+    assertQ(req("q", "dateRange:[1998 TO 2000}"), xpathMatches(0));//exclusive end, so we barely miss one doc
 
     //show without local-params
     assertQ(req("q", "dateRange:\"2014-05-21T12:00:00.000Z\""), xpathMatches(0, 1, 2));
